# serializer version: 1
# name: test_docs_development_features[no_syrupy-no_pypi-private]
  '''
  ---
  title: Required software
  icon: lucide/bookmark-check
  ---
  
  # Prerequisites
  
  - [x] A [supported version][python-versions] of [**Python**][python]
  - [x] [**git** for verson control][git]
  - [x] [Astral's **uv** Python project manager][uv]: `pip install uv` or
    [other supported method][uv-installation]
  - [x] [**Copier**][copier]: `uv tool install copier`
  - [x] [Poe the Poet][poethepoet] (recommended): `uv tool install poethepoet`
  
      This provides `poe` without the `uv run` prefix,
      e.g. `poe test` instead of `uv run poe test`
  
  [copier]: https://copier.readthedocs.io
  [git]: https://git-scm.com
  [poethepoet]: https://poethepoet.natn.io/
  [python-versions]: https://devguide.python.org/versions/
  [python]: https://python.org
  [uv-installation]: https://docs.astral.sh/uv/getting-started/installation/
  [uv]: https://docs.astral.sh/uv/
  
  '''
# ---
# name: test_docs_development_features[no_syrupy-no_pypi-private].1
  '''
  ---
  title: Development workflow
  icon: lucide/braces
  ---
  
  # Project development workflow
  
  ## Cloning the repository
  
  Run `poe setup` in new repository clones to enable git hooks:
  
  ```sh
  poe setup  # Enables git hooks
  ```
  
  ## Development tools
  
  * `poe lint`: Run formatters and static checks
  * `poe test`: Run tests
  
  The `lint` and `test` tasks can also be run as a single combined command with:
  
  ```sh
  poe lt
  ```
  
  ## Documentation server
  
  Start the development server with:
  
  ```sh
  poe docs
  ```
  
  The documentation site will be served at **<http://localhost:8000>**.
  
  To use a different bind host/port, run `poe --help docs` for arguments info.
  
  '''
# ---
# name: test_docs_development_features[no_syrupy-no_pypi-private].2
  '''
  ---
  title: Template updates
  icon: lucide/git-merge
  ---
  
  # Applying copier-python template updates
  
  Copier can update your project with template changes that have occurred since
  the project was created.
  
  To apply updates, simply run in your project directory:
  
  ```sh
  copier update
  ```
  
  This will repeat the setup prompts, in case any prompts have been added or
  changed.
  
  !!! tip
      To change template-provided features in your project, simply change your
      answers in the update prompts.
  
  To apply updates without being prompted (reusing all previous answers), run:
  
  ```sh
  copier update -l
  ```
  
  When [`copier update`][copier-update] is finished, view changes with
  `git status` and `git diff`. Resolve any conflicts, and then commit the result.
  
  [copier-update]: https://copier.readthedocs.io/en/stable/updating/
  
  '''
# ---
# name: test_docs_development_features[no_syrupy-no_pypi-public]
  '''
  ---
  title: Required software
  icon: lucide/bookmark-check
  ---
  
  # Prerequisites
  
  - [x] A [supported version][python-versions] of [**Python**][python]
  - [x] [**git** for verson control][git]
  - [x] [Astral's **uv** Python project manager][uv]: `pip install uv` or
    [other supported method][uv-installation]
  - [x] [**Copier**][copier]: `uv tool install copier`
  - [x] [Poe the Poet][poethepoet] (recommended): `uv tool install poethepoet`
  
      This provides `poe` without the `uv run` prefix,
      e.g. `poe test` instead of `uv run poe test`
  
  [copier]: https://copier.readthedocs.io
  [git]: https://git-scm.com
  [poethepoet]: https://poethepoet.natn.io/
  [python-versions]: https://devguide.python.org/versions/
  [python]: https://python.org
  [uv-installation]: https://docs.astral.sh/uv/getting-started/installation/
  [uv]: https://docs.astral.sh/uv/
  
  '''
# ---
# name: test_docs_development_features[no_syrupy-no_pypi-public].1
  '''
  ---
  title: Development workflow
  icon: lucide/braces
  ---
  
  # Project development workflow
  
  ## Cloning the repository
  
  ```sh
  git clone https://github.com/ness/PKFire
  cd PKFire
  ```
  
  Run `poe setup` in new repository clones to enable git hooks:
  
  ```sh
  poe setup  # Enables git hooks
  ```
  
  ## Development tools
  
  * `poe lint`: Run formatters and static checks
  * `poe test`: Run tests
  
  The `lint` and `test` tasks can also be run as a single combined command with:
  
  ```sh
  poe lt
  ```
  
  ## Documentation server
  
  Start the development server with:
  
  ```sh
  poe docs
  ```
  
  The documentation site will be served at **<http://localhost:8000>**.
  
  To use a different bind host/port, run `poe --help docs` for arguments info.
  
  '''
# ---
# name: test_docs_development_features[no_syrupy-no_pypi-public].2
  '''
  ---
  title: Template updates
  icon: lucide/git-merge
  ---
  
  # Applying copier-python template updates
  
  Copier can update your project with template changes that have occurred since
  the project was created.
  
  To apply updates, simply run in your project directory:
  
  ```sh
  copier update
  ```
  
  This will repeat the setup prompts, in case any prompts have been added or
  changed.
  
  !!! tip
      To change template-provided features in your project, simply change your
      answers in the update prompts.
  
  To apply updates without being prompted (reusing all previous answers), run:
  
  ```sh
  copier update -l
  ```
  
  When [`copier update`][copier-update] is finished, view changes with
  `git status` and `git diff`. Resolve any conflicts, and then commit the result.
  
  [copier-update]: https://copier.readthedocs.io/en/stable/updating/
  
  '''
# ---
# name: test_docs_development_features[no_syrupy-pypi-private]
  '''
  ---
  title: Required software
  icon: lucide/bookmark-check
  ---
  
  # Prerequisites
  
  - [x] A [supported version][python-versions] of [**Python**][python]
  - [x] [**git** for verson control][git]
  - [x] [Astral's **uv** Python project manager][uv]: `pip install uv` or
    [other supported method][uv-installation]
  - [x] [**Copier**][copier]: `uv tool install copier`
  - [x] [Poe the Poet][poethepoet] (recommended): `uv tool install poethepoet`
  
      This provides `poe` without the `uv run` prefix,
      e.g. `poe test` instead of `uv run poe test`
  
  [copier]: https://copier.readthedocs.io
  [git]: https://git-scm.com
  [poethepoet]: https://poethepoet.natn.io/
  [python-versions]: https://devguide.python.org/versions/
  [python]: https://python.org
  [uv-installation]: https://docs.astral.sh/uv/getting-started/installation/
  [uv]: https://docs.astral.sh/uv/
  
  '''
# ---
# name: test_docs_development_features[no_syrupy-pypi-private].1
  '''
  ---
  title: Development workflow
  icon: lucide/braces
  ---
  
  # Project development workflow
  
  ## Cloning the repository
  
  Run `poe setup` in new repository clones to enable git hooks:
  
  ```sh
  poe setup  # Enables git hooks
  ```
  
  ## Development tools
  
  * `poe lint`: Run formatters and static checks
  * `poe test`: Run tests
  
  The `lint` and `test` tasks can also be run as a single combined command with:
  
  ```sh
  poe lt
  ```
  
  ## Documentation server
  
  Start the development server with:
  
  ```sh
  poe docs
  ```
  
  The documentation site will be served at **<http://localhost:8000>**.
  
  To use a different bind host/port, run `poe --help docs` for arguments info.
  
  '''
# ---
# name: test_docs_development_features[no_syrupy-pypi-private].2
  '''
  ---
  title: Template updates
  icon: lucide/git-merge
  ---
  
  # Applying copier-python template updates
  
  Copier can update your project with template changes that have occurred since
  the project was created.
  
  To apply updates, simply run in your project directory:
  
  ```sh
  copier update
  ```
  
  This will repeat the setup prompts, in case any prompts have been added or
  changed.
  
  !!! tip
      To change template-provided features in your project, simply change your
      answers in the update prompts.
  
  To apply updates without being prompted (reusing all previous answers), run:
  
  ```sh
  copier update -l
  ```
  
  When [`copier update`][copier-update] is finished, view changes with
  `git status` and `git diff`. Resolve any conflicts, and then commit the result.
  
  [copier-update]: https://copier.readthedocs.io/en/stable/updating/
  
  '''
# ---
# name: test_docs_development_features[no_syrupy-pypi-public]
  '''
  ---
  title: Required software
  icon: lucide/bookmark-check
  ---
  
  # Prerequisites
  
  - [x] A [supported version][python-versions] of [**Python**][python]
  - [x] [**git** for verson control][git]
  - [x] [Astral's **uv** Python project manager][uv]: `pip install uv` or
    [other supported method][uv-installation]
  - [x] [**Copier**][copier]: `uv tool install copier`
  - [x] [Poe the Poet][poethepoet] (recommended): `uv tool install poethepoet`
  
      This provides `poe` without the `uv run` prefix,
      e.g. `poe test` instead of `uv run poe test`
  
  [copier]: https://copier.readthedocs.io
  [git]: https://git-scm.com
  [poethepoet]: https://poethepoet.natn.io/
  [python-versions]: https://devguide.python.org/versions/
  [python]: https://python.org
  [uv-installation]: https://docs.astral.sh/uv/getting-started/installation/
  [uv]: https://docs.astral.sh/uv/
  
  '''
# ---
# name: test_docs_development_features[no_syrupy-pypi-public].1
  '''
  ---
  title: Development workflow
  icon: lucide/braces
  ---
  
  # Project development workflow
  
  ## Cloning the repository
  
  ```sh
  git clone https://github.com/ness/PKFire
  cd PKFire
  ```
  
  Run `poe setup` in new repository clones to enable git hooks:
  
  ```sh
  poe setup  # Enables git hooks
  ```
  
  ## Development tools
  
  * `poe lint`: Run formatters and static checks
  * `poe test`: Run tests
  
  The `lint` and `test` tasks can also be run as a single combined command with:
  
  ```sh
  poe lt
  ```
  
  ## Documentation server
  
  Start the development server with:
  
  ```sh
  poe docs
  ```
  
  The documentation site will be served at **<http://localhost:8000>**.
  
  To use a different bind host/port, run `poe --help docs` for arguments info.
  
  '''
# ---
# name: test_docs_development_features[no_syrupy-pypi-public].2
  '''
  ---
  title: Template updates
  icon: lucide/git-merge
  ---
  
  # Applying copier-python template updates
  
  Copier can update your project with template changes that have occurred since
  the project was created.
  
  To apply updates, simply run in your project directory:
  
  ```sh
  copier update
  ```
  
  This will repeat the setup prompts, in case any prompts have been added or
  changed.
  
  !!! tip
      To change template-provided features in your project, simply change your
      answers in the update prompts.
  
  To apply updates without being prompted (reusing all previous answers), run:
  
  ```sh
  copier update -l
  ```
  
  When [`copier update`][copier-update] is finished, view changes with
  `git status` and `git diff`. Resolve any conflicts, and then commit the result.
  
  [copier-update]: https://copier.readthedocs.io/en/stable/updating/
  
  '''
# ---
# name: test_docs_development_features[syrupy-no_pypi-private]
  '''
  ---
  title: Required software
  icon: lucide/bookmark-check
  ---
  
  # Prerequisites
  
  - [x] A [supported version][python-versions] of [**Python**][python]
  - [x] [**git** for verson control][git]
  - [x] [Astral's **uv** Python project manager][uv]: `pip install uv` or
    [other supported method][uv-installation]
  - [x] [**Copier**][copier]: `uv tool install copier`
  - [x] [Poe the Poet][poethepoet] (recommended): `uv tool install poethepoet`
  
      This provides `poe` without the `uv run` prefix,
      e.g. `poe test` instead of `uv run poe test`
  
  [copier]: https://copier.readthedocs.io
  [git]: https://git-scm.com
  [poethepoet]: https://poethepoet.natn.io/
  [python-versions]: https://devguide.python.org/versions/
  [python]: https://python.org
  [uv-installation]: https://docs.astral.sh/uv/getting-started/installation/
  [uv]: https://docs.astral.sh/uv/
  
  '''
# ---
# name: test_docs_development_features[syrupy-no_pypi-private].1
  '''
  ---
  title: Development workflow
  icon: lucide/braces
  ---
  
  # Project development workflow
  
  ## Cloning the repository
  
  Run `poe setup` in new repository clones to enable git hooks:
  
  ```sh
  poe setup  # Enables git hooks
  ```
  
  ## Development tools
  
  * `poe lint`: Run formatters and static checks
  * `poe test`: Run tests
  
  The `lint` and `test` tasks can also be run as a single combined command with:
  
  ```sh
  poe lt
  ```
  
  ### Test snapshots
  
  Some tests compare test results with saved snapshots. Test snapshots can be
  updated by running:
  
  ```sh
  poe snapup
  ```
  
  ## Documentation server
  
  Start the development server with:
  
  ```sh
  poe docs
  ```
  
  The documentation site will be served at **<http://localhost:8000>**.
  
  To use a different bind host/port, run `poe --help docs` for arguments info.
  
  '''
# ---
# name: test_docs_development_features[syrupy-no_pypi-private].2
  '''
  ---
  title: Template updates
  icon: lucide/git-merge
  ---
  
  # Applying copier-python template updates
  
  Copier can update your project with template changes that have occurred since
  the project was created.
  
  To apply updates, simply run in your project directory:
  
  ```sh
  copier update
  ```
  
  This will repeat the setup prompts, in case any prompts have been added or
  changed.
  
  !!! tip
      To change template-provided features in your project, simply change your
      answers in the update prompts.
  
  To apply updates without being prompted (reusing all previous answers), run:
  
  ```sh
  copier update -l
  ```
  
  When [`copier update`][copier-update] is finished, view changes with
  `git status` and `git diff`. Resolve any conflicts, and then commit the result.
  
  [copier-update]: https://copier.readthedocs.io/en/stable/updating/
  
  '''
# ---
# name: test_docs_development_features[syrupy-no_pypi-public]
  '''
  ---
  title: Required software
  icon: lucide/bookmark-check
  ---
  
  # Prerequisites
  
  - [x] A [supported version][python-versions] of [**Python**][python]
  - [x] [**git** for verson control][git]
  - [x] [Astral's **uv** Python project manager][uv]: `pip install uv` or
    [other supported method][uv-installation]
  - [x] [**Copier**][copier]: `uv tool install copier`
  - [x] [Poe the Poet][poethepoet] (recommended): `uv tool install poethepoet`
  
      This provides `poe` without the `uv run` prefix,
      e.g. `poe test` instead of `uv run poe test`
  
  [copier]: https://copier.readthedocs.io
  [git]: https://git-scm.com
  [poethepoet]: https://poethepoet.natn.io/
  [python-versions]: https://devguide.python.org/versions/
  [python]: https://python.org
  [uv-installation]: https://docs.astral.sh/uv/getting-started/installation/
  [uv]: https://docs.astral.sh/uv/
  
  '''
# ---
# name: test_docs_development_features[syrupy-no_pypi-public].1
  '''
  ---
  title: Development workflow
  icon: lucide/braces
  ---
  
  # Project development workflow
  
  ## Cloning the repository
  
  ```sh
  git clone https://github.com/ness/PKFire
  cd PKFire
  ```
  
  Run `poe setup` in new repository clones to enable git hooks:
  
  ```sh
  poe setup  # Enables git hooks
  ```
  
  ## Development tools
  
  * `poe lint`: Run formatters and static checks
  * `poe test`: Run tests
  
  The `lint` and `test` tasks can also be run as a single combined command with:
  
  ```sh
  poe lt
  ```
  
  ### Test snapshots
  
  Some tests compare test results with saved snapshots. Test snapshots can be
  updated by running:
  
  ```sh
  poe snapup
  ```
  
  ## Documentation server
  
  Start the development server with:
  
  ```sh
  poe docs
  ```
  
  The documentation site will be served at **<http://localhost:8000>**.
  
  To use a different bind host/port, run `poe --help docs` for arguments info.
  
  '''
# ---
# name: test_docs_development_features[syrupy-no_pypi-public].2
  '''
  ---
  title: Template updates
  icon: lucide/git-merge
  ---
  
  # Applying copier-python template updates
  
  Copier can update your project with template changes that have occurred since
  the project was created.
  
  To apply updates, simply run in your project directory:
  
  ```sh
  copier update
  ```
  
  This will repeat the setup prompts, in case any prompts have been added or
  changed.
  
  !!! tip
      To change template-provided features in your project, simply change your
      answers in the update prompts.
  
  To apply updates without being prompted (reusing all previous answers), run:
  
  ```sh
  copier update -l
  ```
  
  When [`copier update`][copier-update] is finished, view changes with
  `git status` and `git diff`. Resolve any conflicts, and then commit the result.
  
  [copier-update]: https://copier.readthedocs.io/en/stable/updating/
  
  '''
# ---
# name: test_docs_development_features[syrupy-pypi-private]
  '''
  ---
  title: Required software
  icon: lucide/bookmark-check
  ---
  
  # Prerequisites
  
  - [x] A [supported version][python-versions] of [**Python**][python]
  - [x] [**git** for verson control][git]
  - [x] [Astral's **uv** Python project manager][uv]: `pip install uv` or
    [other supported method][uv-installation]
  - [x] [**Copier**][copier]: `uv tool install copier`
  - [x] [Poe the Poet][poethepoet] (recommended): `uv tool install poethepoet`
  
      This provides `poe` without the `uv run` prefix,
      e.g. `poe test` instead of `uv run poe test`
  
  [copier]: https://copier.readthedocs.io
  [git]: https://git-scm.com
  [poethepoet]: https://poethepoet.natn.io/
  [python-versions]: https://devguide.python.org/versions/
  [python]: https://python.org
  [uv-installation]: https://docs.astral.sh/uv/getting-started/installation/
  [uv]: https://docs.astral.sh/uv/
  
  '''
# ---
# name: test_docs_development_features[syrupy-pypi-private].1
  '''
  ---
  title: Development workflow
  icon: lucide/braces
  ---
  
  # Project development workflow
  
  ## Cloning the repository
  
  Run `poe setup` in new repository clones to enable git hooks:
  
  ```sh
  poe setup  # Enables git hooks
  ```
  
  ## Development tools
  
  * `poe lint`: Run formatters and static checks
  * `poe test`: Run tests
  
  The `lint` and `test` tasks can also be run as a single combined command with:
  
  ```sh
  poe lt
  ```
  
  ### Test snapshots
  
  Some tests compare test results with saved snapshots. Test snapshots can be
  updated by running:
  
  ```sh
  poe snapup
  ```
  
  ## Documentation server
  
  Start the development server with:
  
  ```sh
  poe docs
  ```
  
  The documentation site will be served at **<http://localhost:8000>**.
  
  To use a different bind host/port, run `poe --help docs` for arguments info.
  
  '''
# ---
# name: test_docs_development_features[syrupy-pypi-private].2
  '''
  ---
  title: Template updates
  icon: lucide/git-merge
  ---
  
  # Applying copier-python template updates
  
  Copier can update your project with template changes that have occurred since
  the project was created.
  
  To apply updates, simply run in your project directory:
  
  ```sh
  copier update
  ```
  
  This will repeat the setup prompts, in case any prompts have been added or
  changed.
  
  !!! tip
      To change template-provided features in your project, simply change your
      answers in the update prompts.
  
  To apply updates without being prompted (reusing all previous answers), run:
  
  ```sh
  copier update -l
  ```
  
  When [`copier update`][copier-update] is finished, view changes with
  `git status` and `git diff`. Resolve any conflicts, and then commit the result.
  
  [copier-update]: https://copier.readthedocs.io/en/stable/updating/
  
  '''
# ---
# name: test_docs_development_features[syrupy-pypi-public]
  '''
  ---
  title: Required software
  icon: lucide/bookmark-check
  ---
  
  # Prerequisites
  
  - [x] A [supported version][python-versions] of [**Python**][python]
  - [x] [**git** for verson control][git]
  - [x] [Astral's **uv** Python project manager][uv]: `pip install uv` or
    [other supported method][uv-installation]
  - [x] [**Copier**][copier]: `uv tool install copier`
  - [x] [Poe the Poet][poethepoet] (recommended): `uv tool install poethepoet`
  
      This provides `poe` without the `uv run` prefix,
      e.g. `poe test` instead of `uv run poe test`
  
  [copier]: https://copier.readthedocs.io
  [git]: https://git-scm.com
  [poethepoet]: https://poethepoet.natn.io/
  [python-versions]: https://devguide.python.org/versions/
  [python]: https://python.org
  [uv-installation]: https://docs.astral.sh/uv/getting-started/installation/
  [uv]: https://docs.astral.sh/uv/
  
  '''
# ---
# name: test_docs_development_features[syrupy-pypi-public].1
  '''
  ---
  title: Development workflow
  icon: lucide/braces
  ---
  
  # Project development workflow
  
  ## Cloning the repository
  
  ```sh
  git clone https://github.com/ness/PKFire
  cd PKFire
  ```
  
  Run `poe setup` in new repository clones to enable git hooks:
  
  ```sh
  poe setup  # Enables git hooks
  ```
  
  ## Development tools
  
  * `poe lint`: Run formatters and static checks
  * `poe test`: Run tests
  
  The `lint` and `test` tasks can also be run as a single combined command with:
  
  ```sh
  poe lt
  ```
  
  ### Test snapshots
  
  Some tests compare test results with saved snapshots. Test snapshots can be
  updated by running:
  
  ```sh
  poe snapup
  ```
  
  ## Documentation server
  
  Start the development server with:
  
  ```sh
  poe docs
  ```
  
  The documentation site will be served at **<http://localhost:8000>**.
  
  To use a different bind host/port, run `poe --help docs` for arguments info.
  
  '''
# ---
# name: test_docs_development_features[syrupy-pypi-public].2
  '''
  ---
  title: Template updates
  icon: lucide/git-merge
  ---
  
  # Applying copier-python template updates
  
  Copier can update your project with template changes that have occurred since
  the project was created.
  
  To apply updates, simply run in your project directory:
  
  ```sh
  copier update
  ```
  
  This will repeat the setup prompts, in case any prompts have been added or
  changed.
  
  !!! tip
      To change template-provided features in your project, simply change your
      answers in the update prompts.
  
  To apply updates without being prompted (reusing all previous answers), run:
  
  ```sh
  copier update -l
  ```
  
  When [`copier update`][copier-update] is finished, view changes with
  `git status` and `git diff`. Resolve any conflicts, and then commit the result.
  
  [copier-update]: https://copier.readthedocs.io/en/stable/updating/
  
  '''
# ---
# name: test_docs_features[container-no_pypi]
  '''
  ---
  title: One time setup
  icon: lucide/package-plus
  ---
  
  # One time setup
  
  These steps only need to be completed once after the project is first created.
  
  ## GitHub repository
  
  [Settings → General][repo-settings]:
  
  - [x] Allow merge commits
  - [ ] Allow squash merging
  - [ ] Allow rebase merging
  - [x] Automatically delete head branches
  
  [Settings → Branches][repo-settings-branches] → Add branch protection rule
  for the Default branch (`main`):
  
  - [x] Restrict deletions
  - [x] Require a pull request before merging
  - [x] Block force pushes
  
  ## Renovate
  
  Ensure the [Renovate app][renovate] is installed on your account, then
  enable it for `ness/PKFire`.
  
  ## Container registry (ghcr.io)
  
  Enable write access for Actions:
  
  [Settings → Actions → General][repo-settings-actions-general]
  → Workflow permissions → Read and write permissions
  
  ## GitHub Pages
  
  [Settings → Pages][repo-settings-pages] → Source → GitHub Actions
  
  [renovate]: https://github.com/apps/renovate
  [repo-settings]: https://github.com/ness/PKFire/settings
  [repo-settings-actions-general]: https://github.com/ness/PKFire/settings/actions
  [repo-settings-branches]: https://github.com/ness/PKFire/settings/branches
  [repo-settings-pages]: https://github.com/ness/PKFire/settings/pages
  
  '''
# ---
# name: test_docs_features[container-no_pypi].1
  '''
  ---
  title: Releasing a new version
  icon: lucide/rocket
  ---
  
  # Releasing a new version
  
  Release version numbers should follow [Semantic Versioning][semver].
  
  To create a release, run `poe release` with one of `patch`, `minor`, or `major`
  corresponding to the version number component to update:
  
  ```sh
  poe release patch|minor|major
  ```
  
  A new tag with the new release version number will be created automatically
  using [bump-my-version][bump-my-version] (for example, `v1.2.3`).
  
  Afterward, push the new release tag:
  
  ```sh
  git push --tags
  ```
  
  * A corresponding [GitHub release][github-releases]
    will be created automatically.
  
      [![GitHub Release][github-release-badge]][github-release-latest]
  
  * A container image will be built and published to
    the [GitHub Container Registry (GHCR)][ghcr-docs].
  
  [bump-my-version]: https://callowayproject.github.io/bump-my-version/
  [ghcr-project]: https://github.com/ness/PKFire/pkgs/container/PKFire
  [github-release-badge]: https://img.shields.io/github/v/release/ness/PKFire
  [github-release-latest]: https://github.com/ness/PKFire/releases/latest
  [github-releases]: https://github.com/ness/PKFire/releases
  [semver]: https://semver.org/
  
  '''
# ---
# name: test_docs_features[container-pypi]
  '''
  ---
  title: One time setup
  icon: lucide/package-plus
  ---
  
  # One time setup
  
  These steps only need to be completed once after the project is first created.
  
  ## GitHub repository
  
  [Settings → General][repo-settings]:
  
  - [x] Allow merge commits
  - [ ] Allow squash merging
  - [ ] Allow rebase merging
  - [x] Automatically delete head branches
  
  [Settings → Branches][repo-settings-branches] → Add branch protection rule
  for the Default branch (`main`):
  
  - [x] Restrict deletions
  - [x] Require a pull request before merging
  - [x] Block force pushes
  
  ## Renovate
  
  Ensure the [Renovate app][renovate] is installed on your account, then
  enable it for `ness/PKFire`.
  
  ## PyPI publishing
  
  This project uses [trusted publishing][pypi-trusted-publishing] so no API tokens
  need to be stored as secrets.
  
  1. On PyPI, add a (pending) trusted publisher in your
     [Trusted Publisher Management][pypi-publishing-settings] settings:
       - Publisher: GitHub Actions
       - Owner: `ness`
       - Repository: `PKFire`
       - Workflow: `release.yaml`
       - Environment: `pypi`
  2. Create the `pypi` environment in the GitHub repository:
     [Settings → Environments][repo-settings-envs] → New environment → `pypi`
  3. Publish a release by pushing a tag:
     ```sh
     git tag v0.1.0  # or your desired first version number
     git push --tags
     ```
  
  ## Container registry (ghcr.io)
  
  Enable write access for Actions:
  
  [Settings → Actions → General][repo-settings-actions-general]
  → Workflow permissions → Read and write permissions
  
  ## GitHub Pages
  
  [Settings → Pages][repo-settings-pages] → Source → GitHub Actions
  
  [pypi-publishing-settings]: https://pypi.org/manage/account/publishing/
  [pypi-trusted-publishing]: https://docs.pypi.org/trusted-publishers/
  [renovate]: https://github.com/apps/renovate
  [repo-settings]: https://github.com/ness/PKFire/settings
  [repo-settings-actions-general]: https://github.com/ness/PKFire/settings/actions
  [repo-settings-envs]: https://github.com/ness/PKFire/settings/environments
  [repo-settings-branches]: https://github.com/ness/PKFire/settings/branches
  [repo-settings-pages]: https://github.com/ness/PKFire/settings/pages
  
  '''
# ---
# name: test_docs_features[container-pypi].1
  '''
  ---
  title: Releasing a new version
  icon: lucide/rocket
  ---
  
  # Releasing a new version
  
  Release version numbers should follow [Semantic Versioning][semver].
  
  To create a release, run `poe release` with one of `patch`, `minor`, or `major`
  corresponding to the version number component to update:
  
  ```sh
  poe release patch|minor|major
  ```
  
  A new tag with the new release version number will be created automatically
  using [bump-my-version][bump-my-version] (for example, `v1.2.3`).
  
  Afterward, push the new release tag:
  
  ```sh
  git push --tags
  ```
  
  * A corresponding [GitHub release][github-releases]
    will be created automatically.
  
      [![GitHub Release][github-release-badge]][github-release-latest]
  
  * A release package will be built and [uploaded to PyPI][pypi-project].
  
      [![PyPI][pypi-badge]][pypi-project]
  
  * A container image will be built and published to
    the [GitHub Container Registry (GHCR)][ghcr-docs].
  
  [bump-my-version]: https://callowayproject.github.io/bump-my-version/
  [ghcr-project]: https://github.com/ness/PKFire/pkgs/container/PKFire
  [github-release-badge]: https://img.shields.io/github/v/release/ness/PKFire
  [github-release-latest]: https://github.com/ness/PKFire/releases/latest
  [github-releases]: https://github.com/ness/PKFire/releases
  [pypi-badge]: https://img.shields.io/pypi/v/PKFire
  [pypi-project]: https://pypi.org/project/PKFire/
  [semver]: https://semver.org/
  
  '''
# ---
# name: test_docs_features[no_container-no_pypi]
  '''
  ---
  title: One time setup
  icon: lucide/package-plus
  ---
  
  # One time setup
  
  These steps only need to be completed once after the project is first created.
  
  ## GitHub repository
  
  [Settings → General][repo-settings]:
  
  - [x] Allow merge commits
  - [ ] Allow squash merging
  - [ ] Allow rebase merging
  - [x] Automatically delete head branches
  
  [Settings → Branches][repo-settings-branches] → Add branch protection rule
  for the Default branch (`main`):
  
  - [x] Restrict deletions
  - [x] Require a pull request before merging
  - [x] Block force pushes
  
  ## Renovate
  
  Ensure the [Renovate app][renovate] is installed on your account, then
  enable it for `ness/PKFire`.
  
  ## GitHub Pages
  
  [Settings → Pages][repo-settings-pages] → Source → GitHub Actions
  
  [renovate]: https://github.com/apps/renovate
  [repo-settings]: https://github.com/ness/PKFire/settings
  [repo-settings-branches]: https://github.com/ness/PKFire/settings/branches
  [repo-settings-pages]: https://github.com/ness/PKFire/settings/pages
  
  '''
# ---
# name: test_docs_features[no_container-no_pypi].1
  '''
  ---
  title: Releasing a new version
  icon: lucide/rocket
  ---
  
  # Releasing a new version
  
  Release version numbers should follow [Semantic Versioning][semver].
  
  To create a release, run `poe release` with one of `patch`, `minor`, or `major`
  corresponding to the version number component to update:
  
  ```sh
  poe release patch|minor|major
  ```
  
  A new tag with the new release version number will be created automatically
  using [bump-my-version][bump-my-version] (for example, `v1.2.3`).
  
  Afterward, push the new release tag:
  
  ```sh
  git push --tags
  ```
  
  * A corresponding [GitHub release][github-releases]
    will be created automatically.
  
      [![GitHub Release][github-release-badge]][github-release-latest]
  
  [bump-my-version]: https://callowayproject.github.io/bump-my-version/
  [github-release-badge]: https://img.shields.io/github/v/release/ness/PKFire
  [github-release-latest]: https://github.com/ness/PKFire/releases/latest
  [github-releases]: https://github.com/ness/PKFire/releases
  [semver]: https://semver.org/
  
  '''
# ---
# name: test_docs_features[no_container-pypi]
  '''
  ---
  title: One time setup
  icon: lucide/package-plus
  ---
  
  # One time setup
  
  These steps only need to be completed once after the project is first created.
  
  ## GitHub repository
  
  [Settings → General][repo-settings]:
  
  - [x] Allow merge commits
  - [ ] Allow squash merging
  - [ ] Allow rebase merging
  - [x] Automatically delete head branches
  
  [Settings → Branches][repo-settings-branches] → Add branch protection rule
  for the Default branch (`main`):
  
  - [x] Restrict deletions
  - [x] Require a pull request before merging
  - [x] Block force pushes
  
  ## Renovate
  
  Ensure the [Renovate app][renovate] is installed on your account, then
  enable it for `ness/PKFire`.
  
  ## PyPI publishing
  
  This project uses [trusted publishing][pypi-trusted-publishing] so no API tokens
  need to be stored as secrets.
  
  1. On PyPI, add a (pending) trusted publisher in your
     [Trusted Publisher Management][pypi-publishing-settings] settings:
       - Publisher: GitHub Actions
       - Owner: `ness`
       - Repository: `PKFire`
       - Workflow: `release.yaml`
       - Environment: `pypi`
  2. Create the `pypi` environment in the GitHub repository:
     [Settings → Environments][repo-settings-envs] → New environment → `pypi`
  3. Publish a release by pushing a tag:
     ```sh
     git tag v0.1.0  # or your desired first version number
     git push --tags
     ```
  
  ## GitHub Pages
  
  [Settings → Pages][repo-settings-pages] → Source → GitHub Actions
  
  [pypi-publishing-settings]: https://pypi.org/manage/account/publishing/
  [pypi-trusted-publishing]: https://docs.pypi.org/trusted-publishers/
  [renovate]: https://github.com/apps/renovate
  [repo-settings]: https://github.com/ness/PKFire/settings
  [repo-settings-envs]: https://github.com/ness/PKFire/settings/environments
  [repo-settings-branches]: https://github.com/ness/PKFire/settings/branches
  [repo-settings-pages]: https://github.com/ness/PKFire/settings/pages
  
  '''
# ---
# name: test_docs_features[no_container-pypi].1
  '''
  ---
  title: Releasing a new version
  icon: lucide/rocket
  ---
  
  # Releasing a new version
  
  Release version numbers should follow [Semantic Versioning][semver].
  
  To create a release, run `poe release` with one of `patch`, `minor`, or `major`
  corresponding to the version number component to update:
  
  ```sh
  poe release patch|minor|major
  ```
  
  A new tag with the new release version number will be created automatically
  using [bump-my-version][bump-my-version] (for example, `v1.2.3`).
  
  Afterward, push the new release tag:
  
  ```sh
  git push --tags
  ```
  
  * A corresponding [GitHub release][github-releases]
    will be created automatically.
  
      [![GitHub Release][github-release-badge]][github-release-latest]
  
  * A release package will be built and [uploaded to PyPI][pypi-project].
  
      [![PyPI][pypi-badge]][pypi-project]
  
  [bump-my-version]: https://callowayproject.github.io/bump-my-version/
  [github-release-badge]: https://img.shields.io/github/v/release/ness/PKFire
  [github-release-latest]: https://github.com/ness/PKFire/releases/latest
  [github-releases]: https://github.com/ness/PKFire/releases
  [pypi-badge]: https://img.shields.io/pypi/v/PKFire
  [pypi-project]: https://pypi.org/project/PKFire/
  [semver]: https://semver.org/
  
  '''
# ---
